--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
     <groupId>org.shopme</groupId>
     <artifactId>ShopmeProject</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>pom</packaging>
+    <name>ShopmeProject</name>
+    <description>Root Project</description>
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
