Task 6: create ShopmeFrontEnd module (frontend portal website)

--- a/ShopmeWebParent/ShopmeFrontEnd/pom.xml
+++ b/ShopmeWebParent/ShopmeFrontEnd/pom.xml
@@ -7,9 +7,9 @@
         <artifactId>ShopmeWebParent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>ShopmeBackEnd</artifactId>
-    <name>ShopmeBackEnd</name>
-    <description>Shopme Admin project</description>
+    <artifactId>ShopmeFrontEnd</artifactId>
+    <name>ShopmeFrontEnd</name>
+    <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>15</java.version>
     </properties>
