--- a/ShopmeWebParent/pom.xml
+++ b/ShopmeWebParent/pom.xml
@@ -19,6 +19,7 @@
     </properties>
     <modules>
         <module>ShopmeBackEnd</module>
+        <module>ShopmeFrontEnd</module>
     </modules>
     <dependencies>
         <dependency>
