--- a/ShopmeWebParent/pom.xml
+++ b/ShopmeWebParent/pom.xml
@@ -48,6 +48,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.shopme</groupId>
+            <artifactId>ShopmeCommon</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!--endregion-->
 
         <!--region WebJars For Bootstrap & Jquery-->
