--- a/ShopmeWebParent/pom.xml
+++ b/ShopmeWebParent/pom.xml
@@ -75,6 +75,19 @@
         </dependency>
         <!--endregion-->
 
+        <!--region Spring Security-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!--endregion-->
+
         <!--region Spring Test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
