Task 20: working on photo upload (update user controller)

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Define Devtools Settings (Auto Compile)
 spring.devtools.add-properties=true
 spring.devtools.livereload.enabled=true
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
