--- a/ShopmeWebParent/ShopmeBackEnd/pom.xml
+++ b/ShopmeWebParent/ShopmeBackEnd/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.supercsv</groupId>
+            <artifactId>super-csv</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
