--- a/ShopmeWebParent/ShopmeBackEnd/pom.xml
+++ b/ShopmeWebParent/ShopmeBackEnd/pom.xml
@@ -32,6 +32,13 @@
             <version>4.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.26</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
