--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.devtools.livereload.enabled=true
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
-logging.file.name=Shopme-backend.log
-logging.logback.rollingpolicy.file-name-pattern=Shopme-backend-%d{yyyy-MM-dd}.%i.log
-logging.logback.rollingpolicy.max-file-size=100KB
-logging.logback.rollingpolicy.total-size-cap=1MB
-logging.logback.rollingpolicy.max-history=14
-logging.logback.rollingpolicy.clean-history-on-start=true
+#logging.file.name=Shopme-backend.log
+#logging.logback.rollingpolicy.file-name-pattern=Shopme-backend-%d{yyyy-MM-dd}.%i.log
+#logging.logback.rollingpolicy.max-file-size=100KB
+#logging.logback.rollingpolicy.total-size-cap=1MB
+#logging.logback.rollingpolicy.max-history=14
+#logging.logback.rollingpolicy.clean-history-on-start=true
